--- a/frontend/src/pages/usuarios/listar_usuarios.css
+++ b/frontend/src/pages/usuarios/listar_usuarios.css
@@ -56,7 +56,7 @@ nav ul li a {
     width: 80px;
 }
 
-.listarUsuario h1{
+h1{
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
