--- a/frontend/src/pages/visu/visualizar.css
+++ b/frontend/src/pages/visu/visualizar.css
@@ -1,51 +1,40 @@
 .product-detail-page {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-  }
-  
-  .product-images {
-    flex: 1;
-    margin-right: 20px;
-  }
-  
-  .carousel {
-    display: flex;
-    overflow-x: auto;
-  }
-  
-  .carousel img {
-    width: 100px;
-    height: 100px;
-    margin-right: 10px;
-    cursor: pointer;
-  }
-  
-  .product-info {
-    flex: 1;
-  }
-  
-  .product-info h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .product-info p {
-    margin-bottom: 5px;
-  }
-  
-  .product-info button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .product-info button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.carousel {
+  height: 300px;
+  width: 300px;
+}
+
+.product-info {
+  width: 50%;
+  margin-left: 20px;
+}
+
+.product-info h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.product-info p {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
